--- a/src/app/features/footer/footer.component.html
+++ b/src/app/features/footer/footer.component.html
@@ -1,1 +1,13 @@
-<p>footer works!</p>
+<div class="footer-container">
+  <h5 class="title">Designed by Andrea Tommasini</h5>
+  <div class="contacts-container">
+    <div class="direct">
+      <p>andrea.tommasini.mail@gmail.com</p>
+      <p>+39 3456818606</p>
+    </div>
+    <div class="links">
+      <a href="https://github.com/Cenosillicaphobia" target="_blank">GITHUB</a>
+      <a aria-disabled="true">LINKEDIN</a>
+    </div>
+  </div>
+</div>
