--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div class="page-container">
+
   <app-header class="app-header"></app-header>
 
+  <h5 class="home-text">Swipe up to fly</h5>
+
   <div class="home-page">
+    
     <img src="../assets/img/earth.png" alt="earth image" class="earth">
     <img src="../assets/img/cloud2.png" alt="cloud image" class="cloud">
     <img src="../assets/img/airplane.png" alt="airplane image" class="airplane">
