--- a/src/app/features/form/form.component.css
+++ b/src/app/features/form/form.component.css
@@ -2,17 +2,23 @@
   width: 75%;
   margin: auto;
   padding: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
   background-color: rgb(240, 248, 255, 0.8);
   border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  text-align: center;
+}
+
+.form {
+  text-align: center;
 }
 
 .form-title {
-  font-size: 40px;
+  font-size: 60px;
+  text-shadow: 2px 2px 4px skyblue;
 }
 
 .select-container {
@@ -23,14 +29,34 @@
 }
 
 label {
-  font-size: 28px;
+  font-size: 30px;
+  font-weight: 700;
 }
 
 select,
 input {
   font-family: 'Courier New', Courier, monospace;
   margin-top: 5px;
-  width: auto;
+  width: 250px;
   font-size: 15px;
   text-align: center;
+}
+
+button {
+  width: fit-content;
+  margin-top: 20px;
+  font-size: 30px;
+  padding: 5px;
+  background-color: aliceblue;
+  border: solid 1px green;
+  color: green;
+  border-radius: 10px;
+  transition: 0.25s;
+}
+
+button:hover {
+  background-color: skyblue;
+  border: solid 1px aliceblue;
+  color: aliceblue;
+  font-size: 35px;
 }
