--- a/src/app/features/header/header.component.css
+++ b/src/app/features/header/header.component.css
@@ -2,7 +2,7 @@
   background-color: aliceblue;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -12,24 +12,33 @@
 }
 
 .img {
-  width: 60px;
+  width: 80px;
   height: auto;
+  margin-right: 25px;
 }
 
 .title {
-  font-size: 70px;
+  font-size: 100px;
 }
 
-.link {
-  font-size: 30px;
-}
 @media (max-width: 400px){
 
   .title {
     font-size: 40px;
   }
 
-  .link {
-    font-size: 20px;
+  .img {
+    width: 50px;
+    height: auto;
+    margin-right: 10px;
   }
+
+}
+
+@media (max-width: 830px){
+
+  .title {
+    font-size: 70px;
+  }
+
 }
