--- a/src/app/features/footer/footer.component.css
+++ b/src/app/features/footer/footer.component.css
@@ -11,18 +11,15 @@
   font-size: 40px;
 }
 
-.contacts-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  text-align: center;
-  font-size: 20px;
-}
-
 .links {
   display: flex;
-  flex-direction: column;
-  margin-left: 25px;
+  flex-direction: row;
+  gap: 10px;
+}
+
+img {
+  width: 40px;
+  height: auto;
 }
 
 @media (max-width: 400px){
@@ -31,19 +28,9 @@
     font-size: 20px;
   }
 
-  .contacts-container {
-    font-size: 10px;
-    flex-direction: column;
-  }
-
-  .direct {
-    font-size: 8px;
-  }
-
-  .links {
-    flex-direction: row;
-    margin: auto;
-    gap: 5px;
+  img {
+    width: 20px;
+    height: auto;
   }
 
 }
