--- a/src/app/features/response/response.component.html
+++ b/src/app/features/response/response.component.html
@@ -1,10 +1,10 @@
 <div class="response-container">
 
+  <div *ngIf="responseData != '' && !isLoading; else loader">
   <h3 class="title">This trip emit:</h3>
-
-  <div class="response" *ngIf="responseData != ''; else loader">
   <p>{{responseData.co2e | number: '4.0-0'}}</p>
   <p>Kg of Co2</p>
+  <button (click)="goToHome()">Change trip</button>
   </div>
 
   <ng-template #loader>
