ottimizzato css per mobile

--- a/src/app/features/footer/footer.component.html
+++ b/src/app/features/footer/footer.component.html
@@ -4,7 +4,7 @@
     <a href="https://github.com/Cenosillicaphobia" target="_blank">
       <img src="assets/img/github.png">
     </a>
-    <a aria-disabled="true">
+    <a href="https://linkedin.com/in/andrea-tommasini" target="_blank">
       <img src="assets/img/linkedin.png">
     </a>
   </div>
