--- a/src/app/features/header/header.component.html
+++ b/src/app/features/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header-container">
   <img class="img" src="assets/img/favicon.ico">
-  <h1 class="title">Travel With Knowledge</h1>
+  <h1 class="title" (click)="backHome()">Travel With Knowledge</h1>
 </div>
