--- a/src/app/features/form/form.component.css
+++ b/src/app/features/form/form.component.css
@@ -79,3 +79,19 @@ button:disabled:hover {
   color: skyblue;
   border: solid 1px skyblue
 }
+
+@media (max-width: 400px){
+
+  .form-title {
+    font-size: 30px;
+  }
+
+  label {
+    font-size: 20px;
+  }
+
+  button {
+    font-size: 20px;
+  }
+
+}
