--- a/src/app/features/header/header.component.css
+++ b/src/app/features/header/header.component.css
@@ -23,14 +23,8 @@
 
 @media (max-width: 400px){
 
-  .title {
-    font-size: 40px;
-  }
-
   .img {
-    width: 50px;
-    height: auto;
-    margin-right: 10px;
+    display: none;
   }
 
 }
