--- a/src/app/features/header/header.component.css
+++ b/src/app/features/header/header.component.css
@@ -12,27 +12,23 @@
 }
 
 .img {
-  width: 80px;
+  width: 8vw;
   height: auto;
   margin-right: 25px;
 }
 
 .title {
-  font-size: 100px;
+  font-size: 8vw;
 }
 
-@media (max-width: 540px){
-
-  .img {
-    display: none;
-  }
-
-}
-
-@media (max-width: 830px){
+@media (max-width: 640px){
 
   .title {
-    font-size: 70px;
+    font-size: 10vw;
+  }
+
+  .img {
+    width: 12vw;
   }
 
 }
