--- a/src/app/features/home/home.component.css
+++ b/src/app/features/home/home.component.css
@@ -13,14 +13,14 @@
 }
 
 .title {
-  font-size: 60px;
+  font-size: 5vw;
   text-shadow: 2px 2px 4px skyblue;
 }
 
 p { 
   margin-top: 25px;
   margin-bottom: 25px;
-  font-size: 30px;
+  font-size: 2.5vw;
   font-weight: 700;
 }
 
@@ -59,11 +59,11 @@ button:hover {
 @media (max-width: 540px){
 
   .title {
-    font-size: 30px;
+    font-size: 8vw;
   }
 
   p {
-    font-size: 18px;
+    font-size: 4vw;
   }
 
   button {
